force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>