force-app/main/default/objects/Inventory__c/fields/AddBoxedTotal__c.field-meta.xml
<CustomField>
    <fullName>AddBoxedTotal__c</fullName>
    <label>AddBoxedTotal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>