force-app/main/default/objects/Inventory__c/fields/FloorBoxTotal__c.field-meta.xml
<CustomField>
    <fullName>FloorBoxTotal__c</fullName>
    <label>FloorBoxTotal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>