force-app/main/default/objects/Inventory__c/fields/GiftGrid__c.field-meta.xml
<CustomField>
    <fullName>GiftGrid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Grid</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>