force-app/main/default/objects/Inventory__c/fields/Img_Bof__c.field-meta.xml
<CustomField>
    <fullName>Img_Bof__c</fullName>
    <label>Img Bof</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>