force-app/main/default/objects/Inventory__c/fields/Img_Boxed__c.field-meta.xml
<CustomField>
    <fullName>Img_Boxed__c</fullName>
    <label>Img Boxed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>