force-app/main/default/objects/Inventory__c/fields/InitialStock__c.field-meta.xml
<CustomField>
    <fullName>InitialStock__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Initial Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>