force-app/main/default/objects/Inventory__c/fields/Inspection_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Product Item</label>
    <referenceTo>Inspection_Product_Item__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>