force-app/main/default/objects/Inventory__c/fields/Inventory_Number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inventory Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>