force-app/main/default/objects/Inventory__c/fields/InventoryTodayVisit__c.field-meta.xml
<CustomField>
    <fullName>InventoryTodayVisit__c</fullName>
    <label>InventoryTodayVisit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>