force-app/main/default/objects/Inventory__c/fields/InventoryWarning__c.field-meta.xml
<CustomField>
    <fullName>InventoryWarning__c</fullName>
    <formula>RealStock__c &lt;=  SafetyInventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Warning</label>
    <type>Checkbox</type>
</CustomField>