force-app/main/default/objects/Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR ((1 OR 2) AND ( NOT (3)))</booleanFilter>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Regional Product</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grid Inventory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>