force-app/main/default/objects/Inventory__c/fields/RealStock__c.field-meta.xml
<CustomField>
    <fullName>RealStock__c</fullName>
    <formula>InitialStock__c +  Inventory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>