force-app/main/default/objects/Inventory__c/fields/SafetyInventory__c.field-meta.xml
<CustomField>
    <fullName>SafetyInventory__c</fullName>
    <label>Safety Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>