force-app/main/default/objects/Inventory__c/fields/SendInventoryWarning__c.field-meta.xml
<CustomField>
    <fullName>SendInventoryWarning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Inventory Warning</label>
    <type>Checkbox</type>
</CustomField>