force-app/main/default/objects/Inventory__c/recordTypes/GridInventory.recordType-meta.xml
<RecordType>
    <fullName>GridInventory</fullName>
    <active>true</active>
    <label>Grid Inventory</label>
</RecordType>