force-app/main/default/objects/Inventory__c/recordTypes/ProductInventory.recordType-meta.xml
<RecordType>
    <fullName>ProductInventory</fullName>
    <active>true</active>
    <label>Product Inventory</label>
</RecordType>