force-app/main/default/objects/Inventory__c/recordTypes/StoreStock.recordType-meta.xml
<RecordType>
    <fullName>StoreStock</fullName>
    <active>true</active>
    <label>Store Stock</label>
</RecordType>