force-app/main/default/objects/Inventory__c/validationRules/Inventory_Number_cannot_be_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Number_cannot_be_less_than_0</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Inventory_Number__c &lt; 0,true,false)</errorConditionFormula>
    <errorDisplayField>Inventory_Number__c</errorDisplayField>
    <errorMessage>Inventory Number cannot be less than 0.</errorMessage>
</ValidationRule>