force-app/main/default/objects/Inventory__c/validationRules/Product_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(RecordType.Name ==&apos;Product Inventory&apos;,ISBLANK(Product__c)),true,false)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required</errorMessage>
</ValidationRule>