force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Shop__c</columns>
    <columns>Customer__c</columns>
    <columns>RealStock__c</columns>
    <columns>Inventory_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>InitialStock__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>