force-app/main/default/objects/Inventory__c/listViews/customer_inventory.listView-meta.xml
<ListView>
    <fullName>customer_inventory</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Product__c</columns>
    <columns>InitialStock__c</columns>
    <columns>RealStock__c</columns>
    <columns>SafetyInventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shop__c</field>
        <operation>equals</operation>
    </filters>
    <label>customer inventory</label>
</ListView>