force-app/main/default/objects/Inventory__c/listViews/Gridding.listView-meta.xml
<ListView>
    <fullName>Gridding</fullName>
    <columns>NAME</columns>
    <columns>GiftGrid__c</columns>
    <columns>Product__c</columns>
    <columns>InitialStock__c</columns>
    <columns>RealStock__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.GridInventory</value>
    </filters>
    <label>Gridding Gift inventory</label>
</ListView>