force-app/main/default/objects/Inventory__c/listViews/store_inventory.listView-meta.xml
<ListView>
    <fullName>store_inventory</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Shop__c</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>InitialStock__c</columns>
    <columns>RealStock__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>ST</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inventory__c.StoreStock</value>
    </filters>
    <label>store inventory</label>
</ListView>